tests/data/placebo/test_security_group_cidr_ingress/ec2.AuthorizeSecurityGroupIngress_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "HTTPStatusCode": 200, 
            "RequestId": "265ce9fe-4e39-4525-9d1f-471aa83d57a9", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Thu, 08 Sep 2016 12:24:15 GMT"
            }
        }
    }
}
