tests/data/placebo/test_security_group_cidr_ingress/ec2.CreateSecurityGroup_1.json
{
  "status_code": 200,
  "data": {
    "GroupId": "sg-2f8e3b5e",
    "ResponseMetadata": {}
  }
}
