tests/data/placebo/test_security_group_cidr_ingress/ec2.DeleteSecurityGroup_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "HTTPStatusCode": 200, 
            "RequestId": "30ddbb04-7f88-4d3f-9eef-9b249bb78984", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Thu, 08 Sep 2016 12:24:23 GMT"
            }
        }
    }
}
