tests/data/placebo/test_security_group_cidr_ingress/ec2.DeleteVpc_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "HTTPStatusCode": 200, 
            "RequestId": "6274e577-e9f8-47f4-a699-a67db09eb6d8", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Thu, 08 Sep 2016 12:24:23 GMT"
            }
        }
    }
}
