tests/data/placebo/test_security_group_cidr_ingress/ec2.DescribeSecurityGroups_1.json
{
  "status_code": 200,
  "data": {
    "SecurityGroups": [
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "Description": "inbound access",
        "IpPermissions": [
          {
            "PrefixListIds": [],
            "FromPort": 443,
            "IpRanges": [
              {
                "CidrIp": "10.42.1.0/24"
              }
            ],
            "ToPort": 443,
            "IpProtocol": "tcp",
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "GroupName": "allow-https-ingress",
        "VpcId": "vpc-1fcf7766",
        "OwnerId": "644160558196",
        "GroupId": "sg-2f8e3b5e"
      }
    ],
    "ResponseMetadata": {}
  }
}
